--- a/static/css/default.css
+++ b/static/css/default.css
@@ -169,3 +169,78 @@ h2 {
     -o-transform: rotate(-6deg);
 }
 
+.btn {
+  display: inline-block;
+  position: relative;
+  height: 2.8em;
+  padding: 0 1.6em;
+  border: 0;
+  border-radius: 1.5em;  
+  background: none;
+  vertical-align: middle;
+  text-decoration: none;
+  line-height: 2.8em;
+  font-size: 16px;
+  color: #666;
+  font-weight: bold;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6);
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+.btn:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 1.5em;
+  background-image:
+    linear-gradient(
+      rgba(0, 0, 0, 0.2) 0%,
+      rgba(255, 255, 255, 0.2) 100%);
+  box-shadow: 0 -1px 0 0 rgba(255, 255, 255, 0.6) inset;
+  z-index: -1;
+}
+
+.btn:after {
+  content: "";
+  position: absolute;
+  top: 0.4em;
+  right: 0.4em;
+  left:0.4em;
+  bottom: 0.4em;
+  background-color: #ccc;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 0 1px 0 rgba(255, 255, 255, 0.8) inset;
+  background-image:
+    linear-gradient(
+      rgba(255, 255, 255, 0.3) 0%,
+      rgba(0, 0, 0, 0.3) 100%);
+  border-radius: 1em;
+  z-index: -1;
+}
+
+.btn:hover {
+  color: #4f4f4f;
+}
+
+.btn:active,
+.btn.touched {
+  height: 2.5em;
+  padding-top: 0.3em;
+  line-height: 2.5em;
+  color: #4f4f4f;
+}
+
+.btn:active:after,
+.btn.touched:after {
+  background-color: #999;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 1px 1px 4px 0 rgba(0, 0, 0, 0.2) inset;
+  background-image:
+    linear-gradient(
+      rgba(0, 0, 0, 0.1) 0%,
+      rgba(255, 255, 255, 0.1) 100%);  
+}
